# llm_agent_work

./: README.md  pyproject.toml
data/annual_financial_results/: 2023_2q.txt
data/住友商事/annual_financial_results/: 2023_3q.txt
docs/: memo.md
prompts/: decompose.txt  extract_company_name.txt  extract_target_money.txt  extract_target_period.txt
src/: llm_agent_work_utils.py  main.py
